--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   get: ^4.6.5
   google_fonts: ^5.1.0
   smooth_page_indicator: ^1.1.0
+  http: ^1.1.0
+  dio: ^5.3.3
+
 
 dev_dependencies:
   flutter_test:
