--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,25 @@ dependencies:
   get: ^4.6.5
   google_fonts: ^5.1.0
   smooth_page_indicator: ^1.1.0
+  floating_bottom_navigation_bar: ^1.5.2
+  shared_preferences: ^2.2.2
   http: ^1.1.0
   dio: ^5.3.3
+  carousel_slider: ^4.2.1
+  ripple_wave: ^0.1.3
+  flutter_map: ^6.0.0
+  latlong2: ^0.9.0
+  geocoding: ^2.1.1
+  sizer_pro: ^2.2.0
+  geolocator: ^10.1.0
+  flutter_sizer: ^1.0.4
+  sizer: ^2.0.15
+  flutter_polyline_points: ^2.0.0
+  khalti: ^2.0.0
+  khalti_flutter: ^3.0.0
+  cached_network_image: ^3.3.1
+  image_picker: ^1.0.8
+
 
 
 dev_dependencies:
@@ -68,6 +85,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
